--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -147,9 +147,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.4 3.7 1.5 0.2]\n",
+      " [4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.  1.4 0.1]\n",
+      " [4.3 3.  1.1 0.1]\n",
+      " [5.8 4.  1.2 0.2]\n",
+      " [5.7 4.4 1.5 0.4]\n",
+      " [5.4 3.9 1.3 0.4]\n",
+      " [5.1 3.5 1.4 0.3]\n",
+      " [5.7 3.8 1.7 0.3]\n",
+      " [5.1 3.8 1.5 0.3]\n",
+      " [5.4 3.4 1.7 0.2]\n",
+      " [5.1 3.7 1.5 0.4]\n",
+      " [4.6 3.6 1.  0.2]\n",
+      " [5.1 3.3 1.7 0.5]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [5.  3.  1.6 0.2]\n",
+      " [5.  3.4 1.6 0.4]\n",
+      " [5.2 3.5 1.5 0.2]\n",
+      " [5.2 3.4 1.4 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.2 4.1 1.5 0.1]\n",
+      " [5.5 4.2 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.2]\n",
+      " [5.  3.2 1.2 0.2]\n",
+      " [5.5 3.5 1.3 0.2]\n",
+      " [4.9 3.6 1.4 0.1]\n",
+      " [4.4 3.  1.3 0.2]\n",
+      " [5.1 3.4 1.5 0.2]\n",
+      " [5.  3.5 1.3 0.3]\n",
+      " [4.5 2.3 1.3 0.3]\n",
+      " [4.4 3.2 1.3 0.2]\n",
+      " [5.  3.5 1.6 0.6]\n",
+      " [5.1 3.8 1.9 0.4]\n",
+      " [4.8 3.  1.4 0.3]\n",
+      " [5.1 3.8 1.6 0.2]\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]\n",
+      " [7.  3.2 4.7 1.4]\n",
+      " [6.4 3.2 4.5 1.5]\n",
+      " [6.9 3.1 4.9 1.5]\n",
+      " [5.5 2.3 4.  1.3]\n",
+      " [6.5 2.8 4.6 1.5]\n",
+      " [5.7 2.8 4.5 1.3]\n",
+      " [6.3 3.3 4.7 1.6]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [6.6 2.9 4.6 1.3]\n",
+      " [5.2 2.7 3.9 1.4]\n",
+      " [5.  2.  3.5 1. ]\n",
+      " [5.9 3.  4.2 1.5]\n",
+      " [6.  2.2 4.  1. ]\n",
+      " [6.1 2.9 4.7 1.4]\n",
+      " [5.6 2.9 3.6 1.3]\n",
+      " [6.7 3.1 4.4 1.4]\n",
+      " [5.6 3.  4.5 1.5]\n",
+      " [5.8 2.7 4.1 1. ]\n",
+      " [6.2 2.2 4.5 1.5]\n",
+      " [5.6 2.5 3.9 1.1]\n",
+      " [5.9 3.2 4.8 1.8]\n",
+      " [6.1 2.8 4.  1.3]\n",
+      " [6.3 2.5 4.9 1.5]\n",
+      " [6.1 2.8 4.7 1.2]\n",
+      " [6.4 2.9 4.3 1.3]\n",
+      " [6.6 3.  4.4 1.4]\n",
+      " [6.8 2.8 4.8 1.4]\n",
+      " [6.7 3.  5.  1.7]\n",
+      " [6.  2.9 4.5 1.5]\n",
+      " [5.7 2.6 3.5 1. ]\n",
+      " [5.5 2.4 3.8 1.1]\n",
+      " [5.5 2.4 3.7 1. ]\n",
+      " [5.8 2.7 3.9 1.2]\n",
+      " [6.  2.7 5.1 1.6]\n",
+      " [5.4 3.  4.5 1.5]\n",
+      " [6.  3.4 4.5 1.6]\n",
+      " [6.7 3.1 4.7 1.5]\n",
+      " [6.3 2.3 4.4 1.3]\n",
+      " [5.6 3.  4.1 1.3]\n",
+      " [5.5 2.5 4.  1.3]\n",
+      " [5.5 2.6 4.4 1.2]\n",
+      " [6.1 3.  4.6 1.4]\n",
+      " [5.8 2.6 4.  1.2]\n",
+      " [5.  2.3 3.3 1. ]\n",
+      " [5.6 2.7 4.2 1.3]\n",
+      " [5.7 3.  4.2 1.2]\n",
+      " [5.7 2.9 4.2 1.3]\n",
+      " [6.2 2.9 4.3 1.3]\n",
+      " [5.1 2.5 3.  1.1]\n",
+      " [5.7 2.8 4.1 1.3]\n",
+      " [6.3 3.3 6.  2.5]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [7.1 3.  5.9 2.1]\n",
+      " [6.3 2.9 5.6 1.8]\n",
+      " [6.5 3.  5.8 2.2]\n",
+      " [7.6 3.  6.6 2.1]\n",
+      " [4.9 2.5 4.5 1.7]\n",
+      " [7.3 2.9 6.3 1.8]\n",
+      " [6.7 2.5 5.8 1.8]\n",
+      " [7.2 3.6 6.1 2.5]\n",
+      " [6.5 3.2 5.1 2. ]\n",
+      " [6.4 2.7 5.3 1.9]\n",
+      " [6.8 3.  5.5 2.1]\n",
+      " [5.7 2.5 5.  2. ]\n",
+      " [5.8 2.8 5.1 2.4]\n",
+      " [6.4 3.2 5.3 2.3]\n",
+      " [6.5 3.  5.5 1.8]\n",
+      " [7.7 3.8 6.7 2.2]\n",
+      " [7.7 2.6 6.9 2.3]\n",
+      " [6.  2.2 5.  1.5]\n",
+      " [6.9 3.2 5.7 2.3]\n",
+      " [5.6 2.8 4.9 2. ]\n",
+      " [7.7 2.8 6.7 2. ]\n",
+      " [6.3 2.7 4.9 1.8]\n",
+      " [6.7 3.3 5.7 2.1]\n",
+      " [7.2 3.2 6.  1.8]\n",
+      " [6.2 2.8 4.8 1.8]\n",
+      " [6.1 3.  4.9 1.8]\n",
+      " [6.4 2.8 5.6 2.1]\n",
+      " [7.2 3.  5.8 1.6]\n",
+      " [7.4 2.8 6.1 1.9]\n",
+      " [7.9 3.8 6.4 2. ]\n",
+      " [6.4 2.8 5.6 2.2]\n",
+      " [6.3 2.8 5.1 1.5]\n",
+      " [6.1 2.6 5.6 1.4]\n",
+      " [7.7 3.  6.1 2.3]\n",
+      " [6.3 3.4 5.6 2.4]\n",
+      " [6.4 3.1 5.5 1.8]\n",
+      " [6.  3.  4.8 1.8]\n",
+      " [6.9 3.1 5.4 2.1]\n",
+      " [6.7 3.1 5.6 2.4]\n",
+      " [6.9 3.1 5.1 2.3]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [6.8 3.2 5.9 2.3]\n",
+      " [6.7 3.3 5.7 2.5]\n",
+      " [6.7 3.  5.2 2.3]\n",
+      " [6.3 2.5 5.  1.9]\n",
+      " [6.5 3.  5.2 2. ]\n",
+      " [6.2 3.4 5.4 2.3]\n",
+      " [5.9 3.  5.1 1.8]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Print Iris array X-variables, indepedent features\n",
     "print(iris.data)"
@@ -174,10 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate Random Forest Classifier with 100 n_estimators and 2 n_jobs\n",
-    "rfc = RandomForestClassifier(n_estimators = 100, n_jobs = 2)"
+    "rfc = RandomForestClassifier(n_estimators = 100, n_jobs = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -227,15 +382,15 @@
      "data": {
       "text/plain": [
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=2,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
+       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=1,\n",
+       "                       oob_score=False, random_state=None, verbose=0,\n",
+       "                       warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,25 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.98\n",
+      "Accuracy = 0.89\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00         9\n",
-      "           1       0.94      1.00      0.97        17\n",
-      "           2       1.00      0.95      0.97        19\n",
+      "           0       1.00      1.00      1.00        15\n",
+      "           1       0.72      1.00      0.84        13\n",
+      "           2       1.00      0.71      0.83        17\n",
       "\n",
-      "   micro avg       0.98      0.98      0.98        45\n",
-      "   macro avg       0.98      0.98      0.98        45\n",
-      "weighted avg       0.98      0.98      0.98        45\n",
+      "    accuracy                           0.89        45\n",
+      "   macro avg       0.91      0.90      0.89        45\n",
+      "weighted avg       0.92      0.89      0.89        45\n",
       "\n"
      ]
     }
@@ -279,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,22 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=2,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
+       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=1,\n",
+       "                       oob_score=False, random_state=None, verbose=0,\n",
+       "                       warm_start=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -354,13 +507,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00         9\n",
-      "           1       0.94      1.00      0.97        17\n",
-      "           2       1.00      0.95      0.97        19\n",
+      "           0       1.00      1.00      1.00        15\n",
+      "           1       0.72      1.00      0.84        13\n",
+      "           2       1.00      0.71      0.83        17\n",
       "\n",
-      "   micro avg       0.98      0.98      0.98        45\n",
-      "   macro avg       0.98      0.98      0.98        45\n",
-      "weighted avg       0.98      0.98      0.98        45\n",
+      "    accuracy                           0.89        45\n",
+      "   macro avg       0.91      0.90      0.89        45\n",
+      "weighted avg       0.92      0.89      0.89        45\n",
       "\n"
      ]
     }
@@ -379,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -394,7 +547,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "versicolor_data = json.dumps({'sl':5.24,'sw':3.0,'pl':3.75,'pw':1.1})\n",
     "r = requests.post(url, versicolor_data)\n",
@@ -403,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +569,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "setosa_data = json.dumps({'sl':5.11,'sw':3.4,'pl':1.6,'pw':0.3})\n",
     "r = requests.post(url, setosa_data)\n",
@@ -425,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +591,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "virginica_data = json.dumps({'sl':6.1,'sw':3.4,'pl':5.6,'pw':2.1})\n",
     "r = requests.post(url, virginica_data)\n",
