--- a/productionize_ml_w_flask.ipynb
+++ b/productionize_ml_w_flask.ipynb
@@ -15,9 +15,9 @@
     "import pickle\n",
     "import requests\n",
     "import json\n",
-    "import pandas as pd\n",
-    "from requests.auth import HTTPProxyAuth\n",
-    "import os"
+    "import os\n",
+    "# import pandas as pd\n",
+    "# from requests.auth import HTTPProxyAuth"
    ]
   },
   {
@@ -35,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -390,7 +388,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,23 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.89\n",
+      "Accuracy = 0.91\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        15\n",
-      "           1       0.72      1.00      0.84        13\n",
-      "           2       1.00      0.71      0.83        17\n",
+      "           0       1.00      1.00      1.00        13\n",
+      "           1       0.81      0.93      0.87        14\n",
+      "           2       0.94      0.83      0.88        18\n",
       "\n",
-      "    accuracy                           0.89        45\n",
-      "   macro avg       0.91      0.90      0.89        45\n",
-      "weighted avg       0.92      0.89      0.89        45\n",
+      "    accuracy                           0.91        45\n",
+      "   macro avg       0.92      0.92      0.92        45\n",
+      "weighted avg       0.92      0.91      0.91        45\n",
       "\n"
      ]
     }
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +482,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -507,13 +505,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        15\n",
-      "           1       0.72      1.00      0.84        13\n",
-      "           2       1.00      0.71      0.83        17\n",
+      "           0       1.00      1.00      1.00        13\n",
+      "           1       0.81      0.93      0.87        14\n",
+      "           2       0.94      0.83      0.88        18\n",
       "\n",
-      "    accuracy                           0.89        45\n",
-      "   macro avg       0.91      0.90      0.89        45\n",
-      "weighted avg       0.92      0.89      0.89        45\n",
+      "    accuracy                           0.91        45\n",
+      "   macro avg       0.92      0.92      0.92        45\n",
+      "weighted avg       0.92      0.91      0.91        45\n",
       "\n"
      ]
     }
@@ -532,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -547,7 +545,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "versicolor_data = json.dumps({'sl':5.24,'sw':3.0,'pl':3.75,'pw':1.1})\n",
     "r = requests.post(url, versicolor_data)\n",
@@ -556,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +567,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "setosa_data = json.dumps({'sl':5.11,'sw':3.4,'pl':1.6,'pw':0.3})\n",
     "r = requests.post(url, setosa_data)\n",
@@ -578,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +589,7 @@
    ],
    "source": [
     "# Set the environment variable NO_PROXY for localhost if behind proxy\n",
-    "# os.environ['NO_PROXY'] = '127.0.0.1'\n",
+    "os.environ['NO_PROXY'] = '127.0.0.1'\n",
     "url = \"http://127.0.0.1:9000/ml_api\"\n",
     "virginica_data = json.dumps({'sl':6.1,'sw':3.4,'pl':5.6,'pw':2.1})\n",
     "r = requests.post(url, virginica_data)\n",
